<resources>
    <string name="app_name">Keimutan Apps</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">KULINER</string>
    <string name="slide_1_desc">Rasakan Berbagai Kuliner yang Akan Memanjakan Lidahmu</string>

    <string name="slide_2_title">HOTEL</string>
    <string name="slide_2_desc">Temukan Hotel yang Nyaman Untuk Istirahat Perjalananmu</string>

    <string name="slide_3_title">WISATA</string>
    <string name="slide_3_desc">Destinasi Menarik Menantimu. Segera Pilih Destinasi Wisatamu</string>

    <string name="slide_4_title">GUIDE</string>
    <string name="slide_4_desc">Cari Guide Untuk Menemani Perjalananmu Agar  semakin asyik </string>

    <!--Fragment Home-->
    <string name="fhome_nama">Bagus Syibro Malisi</string>
    <string name="fhome_lahir">Lahir di Indramayu, 28 Mei 2000</string>
    <string name="fhome_desk">Bagus merupakan anak ketiga dari dua bersaudara.
        Memiliki kakak perempuan yang lebih tua 14 tahun.
        Tertarik pada teknologi dan bagaimana sesuatu dapan terjadi sejak kecil.
        Termasuk orang yang memiliki peduli kasih yang sangat tinggi terhdap sesama orang.
        Selalu menjadi tempat bercerita yang nyaman untuk orang disekitarnya.
        Punya teman yang selalu siap diajak kemanapun.
    </string>
    <string name="fhome_ketertarikan">Ketertarikan . . .</string>
    <string name="fhome_hobi">Membaca Buku.
        Memasak khususnya yang di goreng dan dibakar.
        Bermain Game (R6, World of Warship, WWZ).
        Liburan ke alam (Mendaki gunung, main ke pantai, jelajah hutan).
        Fotografi (khususnya landscape dan street photography).
        Bercita-cita menjadi Pak Haji ketika TK.
        Menjadi Tentara ketika SD-SMP karena game PS2.
        Punya bisnis rumah makan ketika SMA karena suka masak.
        Sekarang menjadi enginer berharap bisa freelance bergaji 10 juta seminggu
    </string>
    <string name="fhome_ketertarikanDesk">Tertarik dengan dunia game.
        Lebih cenderung ke arah senang sunmori alam.
        Bagus senang sunmori, main game, bahkan membaca novel.
        Bagus itu lebih suka sunmori dan pertama kali sunmori yaitu ke lembang lebih tepatnya tangkuban prahu.
        Setelah itu sunmori kedua yaitu ke yogyakarta dan lebih tepatnya ke arah dieng.
        Kalau di yotube Bagus juga senang mendengarkan geostrategis, bahkan sampai ke arah ekonomi.
        Bagus juga senang bermain game. Sudah banyak game yang pernah dimainkan tapi saat ini hanya ada beberapa
        game yang masih dimainkan seperti WWZ, R6, VALORANT, GI, PB.</string>



    <!--Menu Buttom Navigation-->
    <string name="home">Home</string>
    <string name="activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!--    Fragment Daily -->
    <string name="daily_my_daily">My Daily Activity</string>

    <!--    Fragment Account -->
    <string name="account_contactme">Contact Me</string>
    <string name="account_phone_number">0821-1756-5927</string>
    <string name="account_findme">Find Me Here</string>
</resources>
