<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/buttom_navigation_home"/>
    <item
        android:id="@+id/daily_menu"
        android:title="@string/activity"
        android:icon="@drawable/buttom_navigation_daily_activity"/>
    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/buttom_navigation_gallery"/>

    <item
        android:id="@+id/music_menu"
        android:title="@string/music"
        android:icon="@drawable/buttom_navigation_music"/>
    <item
        android:id="@+id/account_menu"
        android:title="@string/account"
        android:icon="@drawable/buttom_navigation_account"/>


</menu>
